# rag_csharp

./: main.py  pyproject.toml  requirements.txt
chroma_clean_arch/: chroma.sqlite3
data/ast_data/: ast_index.jsonl
notebook/: ast_chain_document.ipynb  csharp_document - output 1.ipynb  csharp_document - output 2 Bussiness Requirement.ipynb  csharp_document - output 3.ipynb  csharp_document.ipynb  csharp_document_book_app.md  document.ipynb
notebook/chroma_ast/: chroma.sqlite3
notebook/chroma_clean_arch/: chroma.sqlite3
src/Api/OrderService/: Dockerfile  OrderService.csproj  OrderService.http  Program.cs
src/Api/OrderService/Controllers/: OrdersController.cs
src/Api/OrderService/Properties/: launchSettings.json
src/Application/: Application.csproj
src/Application/Orders/Commands/: CreateOrderCommand.cs
src/Application/Orders/Commands/CreateOrder/: CreateOrderHandler.cs
src/Application/Queries/: GetOrderQuery.cs
src/Application/Queries/GetOrder/: GetOrderHandler.cs
src/Domain/Common/: BaseEntity.cs
src/Domain/Entities/: Order.cs
src/Domain/Interfaces/: IOrderRepository.cs
src/Infrastructure/: Dockerfile  Infrastructure.csproj
src/Infrastructure/Migrations/: 20251211162427_Initial.Designer.cs  20251211162427_Initial.cs  AppDbContextModelSnapshot.cs
src/Infrastructure/Persistence/: AppDbContext.cs
src/Infrastructure/Properties/: launchSettings.json
src/Infrastructure/Repositories/: OrderRepository.cs
